5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1644_2447.log
== TEST (2019-04-09 17:23:57) 
-- CODE:
preco= float(input("Preco: "))
pag= float(input("Pagamento: "))

if (preco > pag):
	print("Falta" pag - preco)
	
else:
	print("Troco de" preco - pag)
-- ERROR:
File "XXXX", line 5
    print("Falta" pag - preco)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:24:16) 
-- CODE:
preco= float(input("Preco: "))
pag= float(input("Pagamento: "))

if (preco > pag):
	print("Falta", pag - preco)
	
else:
	print("Troco de", preco - pag)
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:24:49) 
-- CODE:
preco= float(input("Preco: "))
pag= float(input("Pagamento: "))

if (preco > pag):
	print("Falta", pag - preco)
	
else:
	print("Troco de", preco - pag)
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:25:02) 
-- CODE:
preco= float(input("Preco: "))
pag= float(input("Pagamento: "))

if (preco > pag):
	print("Falta", pag - preco)
	
else:
	print("Troco de", preco - pag)
-- EXECUTION TIME:
0.156822
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:26:03) 
-- CODE:
preco= float(input("Preco: "))
pag= float(input("Pagamento: "))

if (preco > pag):
	print("Falta",  preco - pag)
	
else:
	print("Troco de", pag - preco)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:26:21) 
-- CODE:
preco= float(input("Preco: "))
pag= float(input("Pagamento: "))

if (preco > pag):
	print("Falta",  preco - pag)
	
else:
	print("Troco de", pag - preco)
-- EXECUTION TIME:
0.207206
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
